--- a/ride/templates/search_ride.html
+++ b/ride/templates/search_ride.html
@@ -40,7 +40,7 @@
                 <input type="number" class="form-control" id="passengers" name="passengers" required>
               </div>
             </div>
-            <button type="submit" class="btn btn-outline-primary btn-rounded btn-lg">Buscar</button>
+            <button type="submit" class="btn btn-outline-dark btn-rounded btn-lg">Buscar</button>
           </form>
           <div id="solicitacao" class="mt-4"></div>
         </div>
