--- a/ride/templates/edit_profile.html
+++ b/ride/templates/edit_profile.html
@@ -8,7 +8,7 @@
     {% csrf_token %}
     {{ form.as_p }}
     <div class="d-flex justify-content-end">
-      <button type="submit" class="btn btn-primary">Salvar</button>
+      <button type="submit" class="btn btn-dark">Salvar</button>
     </div>
   </form>
 </div>
