add navbar z-index

--- a/ride/templates/base.html
+++ b/ride/templates/base.html
@@ -45,6 +45,7 @@
         .custom-nav {
           position: fixed;
           bottom: 0;
+          z-index: 9999;
         }
 
         .custom-nav div {
