create google maps api key mixin and remove name field from car model

--- a/ride/templates/create_ride.html
+++ b/ride/templates/create_ride.html
@@ -65,7 +65,7 @@
 {% endblock %}
 
 {% block custom_js %}
-<script src="http://maps.googleapis.com/maps/api/js?&libraries=places&" type="text/javascript"></script>
+<script src="http://maps.googleapis.com/maps/api/js?key={{ GOOGLE_MAPS_API_KEY }}&libraries=places&" type="text/javascript"></script>
 <script type='text/javascript'>
   function initializeStartPoint() {
     let map = new google.maps.Map(document.getElementById("starting-point-map"), {
