--- a/ride/templates/base.html
+++ b/ride/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
@@ -65,6 +67,7 @@
         }
       }
     </style>
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     {% block custom_css %}
     {% endblock %}
   </head>
@@ -84,7 +87,7 @@
         <a href="{% url 'ride:profile' user.id %}" class="btn btn-outline-dark" style="border: 0;">
           <i class="bi bi-person-fill"></i> <span>Perfil</span>
         </a>
-        <a href="{% url 'logout' %}" class="btn btn-outline-danger" style="border: 0;">
+        <a href="{% url 'logout' %}" class="btn btn-outline-dark" style="border: 0;">
           <i class="bi bi-box-arrow-right"></i> <span>Sair</span>
         </a>
       </div>
