--- a/ride/templates/profile.html
+++ b/ride/templates/profile.html
@@ -4,7 +4,7 @@
 {% load static %}
   <div class="container h-100">
     <div class="row">
-      <h1 class="text-center mt-5">PERFIL</h1>
+      <h1 class="text-center mt-4 mb-0">PERFIL</h1>
     </div>
     <hr class="my-5">
     <div class="row d-flex justify-content-center align-items-center ">
