--- a/ride/templates/search_ride.html
+++ b/ride/templates/search_ride.html
@@ -60,7 +60,7 @@
         <div class="card-header fw-bold">
           <a href="{% url 'ride:profile' ride.car.owner.user.id %}" style="color: black;">
             {{ ride.car.owner }} {% if ride.car.owner.rating %}{{ ride.car.owner.rating }} <i class="bi bi-star-fill"></i>{% else %}
-              <div class="badge" style="background-color: #007bff; margin-left: 6px;">Primeira viagem</div>
+              <div class="badge" style="background-color: #6c757d; margin-left: 6px;">Sem nota</div>
             {% endif %}
           </a>
 
