add maps to the search ride screen

--- a/ride/templates/base.html
+++ b/ride/templates/base.html
@@ -71,7 +71,7 @@
     {% block custom_css %}
     {% endblock %}
   </head>
-<body>
+<body class="pb-5">
   {% if user.is_authenticated %}
     <nav class="w-100 custom-nav gradient-custom">
       <div>
