--- a/ride/templates/create_ride.html
+++ b/ride/templates/create_ride.html
@@ -41,7 +41,7 @@
               </div>
               <div class="col-md-6">
                 <div class="form-group mb-3">
-                  <label for="id_available_seats">Horário</label>
+                  <label for="id_available_seats">Data e Hora</label>
                   {{ form.starting_hour }}
                 </div>
               </div>
