--- a/ride/templates/ride_detail.html
+++ b/ride/templates/ride_detail.html
@@ -27,7 +27,7 @@
             <b>Tempo previsto de viagem:</b> {{ ride.estimated_travel_time }} min
           </div>
           <div class="col-sm-6">
-            <b>Status da corrida:</b> {{ ride.status_display_name }}
+            <b>Status da carona:</b> {{ ride.status_display_name }}
           </div>
         </div>
         <div class="col-sm-12 mt-5">
