--- a/ride/templates/rides_history.html
+++ b/ride/templates/rides_history.html
@@ -4,12 +4,9 @@
 
 <div class="container justify-content-center align-items-center vh-100">
   <div class="row">
-    <h1 class="text-center mt-4 mb-0">CARONAS</h1>
+    <h1 class="text-center mt-4 mb-0">HISTÓRICO DE CARONAS</h1>
   </div>
   <hr class="my-5">
-  <div class="d-flex flex-row justify-content-end">
-    <a class="btn btn-dark" href="{% url 'ride:rides_history' %}">Histórico</a>
-  </div>
   <div class="pb-5">
     {% for ride in rides %}
   <div class="card mt-4">
@@ -34,18 +31,12 @@
           <p class="card-text"><strong>Horário:</strong> {{ ride.starting_hour }}</p>
           <p class="card-text"><strong>Assentos Disponíveis:</strong> {{ ride.available_seats }}</p>
         </div>
-        <div class="col-3 my-auto d-flex flex-row justify-content-end gap-2">
-          <a href="{% url 'ride:ride_detail' ride.id %}" class="btn btn-primary btn-md  ">Detalhes</a>
-          {% if request.user.userprofile in ride.passengers.all %}
-          <a href="{% url 'ride:leave_ride' ride.id %}" class="btn btn-danger btn-md">Sair</a>
-          {% endif %}
-        </div>
       </div>
     </div>
   </div>
   {% empty %}
   <div class="alert alert-info mt-4" role="alert">
-    Nenhuma carona agendada.
+    Nenhuma carona encontrada.
   </div>
   {% endfor %}
   </div>
