create start_ride and cancel_ride views

--- a/ride/templates/my_rides.html
+++ b/ride/templates/my_rides.html
@@ -4,7 +4,7 @@
 
 <div class="container justify-content-center align-items-center vh-100">
   <div class="row">
-    <h1 class="text-center mt-4 mb-0">CARONAS</h1>
+    <h1 class="text-center mt-4 mb-0">MINHAS CARONAS</h1>
   </div>
   <hr class="my-5">
   <div class="d-flex flex-row justify-content-end">
