--- a/ride/templates/ride_detail.html
+++ b/ride/templates/ride_detail.html
@@ -14,9 +14,16 @@
     <div class="card shadow" style="border-radius: 15px; margin: auto">
       <div class="card-body" style="padding: 36px;">
         <div class="row">
-          <div class="col-sm-12">
-            <h5>Detalhes da viagem</h5><hr>
+          <div class="col-sm-12 d-flex flex-row justify-content-between">
+            <h5 class="align-self-end">Detalhes da viagem</h5>
+            <div class="d-flex gap-2">
+              {% if is_driver %}
+                <a href="{% url 'ride:cancel_ride' ride.id %}" class="btn btn-danger btn-md" style="width: 100px">Cancelar</a>
+                <a href="{% url 'ride:start_ride' ride.id %}" class="btn btn-dark btn-md" style="width: 100px">Iniciar</a>
+              {% endif %}
+            </div>
           </div>
+          <hr class="mt-2">
           <div class="col-12"><b>Motorista:</b> {{ ride.driver.username }} {% if not is_driver %}<a href="{% url 'ride:profile' ride.driver.id %}">Ver perfil</a>{% endif %}</div>
           <div class="col-6"><b>Carro:</b> {{ ride.car.model }} - {{ ride.car.color }}</div>
           <div class="col-6"><b>Placa:</b> {{ ride.car.plate }}</div>
