--- a/ride/templates/search_ride.html
+++ b/ride/templates/search_ride.html
@@ -13,7 +13,7 @@
 {% block content %}
 <div class="container justify-content-center align-items-center vh-100">
   <div class="row">
-    <h1 class="text-center mt-4 mb-0">CARONAS DISPONÍVEIS</h1>
+    <h1 class="text-center mt-4 mb-0">BUSCAR CARONAS</h1>
   </div>
   <hr class="my-5">
   <div class="row mb-5">
