--- a/ride/templates/ride_detail.html
+++ b/ride/templates/ride_detail.html
@@ -17,9 +17,12 @@
           <div class="col-sm-12 d-flex flex-row justify-content-between">
             <h5 class="align-self-end">Detalhes da viagem</h5>
             <div class="d-flex gap-2">
-              {% if is_driver %}
+              {% if is_driver and is_scheduled %}
                 <a href="{% url 'ride:cancel_ride' ride.id %}" class="btn btn-danger btn-md" style="width: 100px">Cancelar</a>
                 <a href="{% url 'ride:start_ride' ride.id %}" class="btn btn-dark btn-md" style="width: 100px">Iniciar</a>
+              {% endif %}
+              {% if is_driver and is_in_progress %}
+                <a href="{% url 'ride:finish_ride' ride.id %}" class="btn btn-dark btn-md" style="width: 100px">Finalizar</a>
               {% endif %}
             </div>
           </div>
