--- a/ride/templates/ride_detail.html
+++ b/ride/templates/ride_detail.html
@@ -44,7 +44,7 @@
           <div class="d-flex flex-row justify-content-between">
             <h5 class="align-self-end">Passageiros</h5>
             {% if not is_driver %}
-              {% if is_passenger %}
+              {% if is_passenger and is_scheduled %}
                 <a href="{% url 'ride:leave_ride' ride.id %}" class="btn btn-danger btn-md" style="width: 100px">Sair</a>
               {% else %}
                 <a href="{% url 'ride:join_ride' ride.id %}" class="btn btn-success btn-md" style="width: 100px">Entrar</a>
