add address to the ride_detail view

--- a/ride/templates/ride_detail.html
+++ b/ride/templates/ride_detail.html
@@ -70,6 +70,7 @@
         </div>
         <div class="col-sm-12 mt-5">
           <h5>Local de partida</h5><hr>
+          <div class="col-12 mb-1"><b>Endereço:</b> {{ ride.starting_point.address }}</div>
           <iframe
             width="100%"
             height="200"
@@ -83,6 +84,7 @@
         </div>
         <div class="col-sm-12 mt-5">
           <h5>Destino</h5><hr>
+          <div class="col-12 mb-1"><b>Endereço:</b> {{ ride.destination.address }}</div>
           <iframe
             width="100%"
             height="200"
