add padding to the ride results

--- a/ride/templates/search_ride.html
+++ b/ride/templates/search_ride.html
@@ -64,7 +64,7 @@
         </div>
     {% endfor %}
   {% endif %}
-  <div id="ride-results">
+  <div id="ride-results" class="pb-5">
     {% for ride in rides %}
       <div class="card mt-4">
         <div class="card-header fw-bold">
