--- a/ride/templates/base.html
+++ b/ride/templates/base.html
@@ -85,7 +85,7 @@
           <i class="bi bi-plus"></i> <span>Criar</span>
         </a>
         <a href="{% url 'ride:profile' user.id %}" class="btn btn-outline-dark" style="border: 0;">
-          <i class="bi bi-person-fill"></i> <span>Perfil</span>
+          <i class="bi bi-person-fill"></i> <span>{{ request.user.username }}</span>
         </a>
         <a href="{% url 'logout' %}" class="btn btn-outline-dark" style="border: 0;">
           <i class="bi bi-box-arrow-right"></i> <span>Sair</span>
