--- a/ride/templates/search_ride.html
+++ b/ride/templates/search_ride.html
@@ -150,7 +150,7 @@
       geocoder.geocode({ 'location': pos }, function (results, status) {
         if (status === 'OK' && results[0]) {
           input.value = results[0].formatted_address;
-          document.getElementById('city2').value = results[0].address_components[0].long_name;
+          document.getElementById('starting-point-latitude-address').value = results[0].formatted_address;
         }
       });
     });
@@ -193,7 +193,7 @@
       geocoder.geocode({ 'location': pos }, function (results, status) {
         if (status === 'OK' && results[0]) {
           input.value = results[0].formatted_address;
-          document.getElementById('city2').value = results[0].address_components[0].long_name;
+          document.getElementById('destination-address').value = results[0].formatted_address;
         }
       });
     });
